--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 // Demo istifadəçi
 const USER = {
   username: "admin",
-  password: "1234"
+  password: "balux"
 };
 
 function login() {
@@ -130,3 +130,4 @@ document.getElementById('submitBtn').addEventListener('click', () => {
 
 </body>
 </html>
+
