--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 // Demo istifadəçi
 const USER = {
-  username: "admin",
+  username: "Şagird",
   password: "balux"
 };
 
@@ -130,5 +130,6 @@ document.getElementById('submitBtn').addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
