--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 /* ===== LOGIN SISTEMI ===== */
 
 // Demo istifadəçi
-const USER = {
+ USER = {
   username: "Şagird",
   password: "balux"
 };
@@ -130,6 +130,7 @@ document.getElementById('submitBtn').addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
