--- a/index.html
+++ b/index.html
@@ -3,30 +3,119 @@
 <head>
 <meta charset="UTF-8">
 <title>Fizika Testi - Login</title>
+
 <style>
-  body { font-family: Arial, sans-serif; margin: 30px; }
-  h1 { margin-bottom: 10px; }
-  .question { margin-bottom: 20px; }
-  button { padding: 10px 20px; margin-top: 20px; }
-  select, input { padding: 5px; margin-bottom: 10px; }
-  #result { margin-top: 20px; font-weight: bold; }
-  #quizContainer { display: none; }
-  #loginBox { max-width: 300px; }
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  font-family: "Segoe UI", Arial, sans-serif;
+  background: linear-gradient(120deg, #667eea, #764ba2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* LOGIN və QUIZ qutusu */
+#loginBox, #quizContainer {
+  background: #ffffff;
+  width: 100%;
+  max-width: 420px;
+  padding: 30px;
+  border-radius: 16px;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+  animation: fadeIn 0.6s ease;
+}
+
+/* Quiz böyükdür */
+#quizContainer {
+  max-width: 800px;
+}
+
+/* Başlıqlar */
+h1, h2 {
+  text-align: center;
+  color: #333;
+}
+
+/* Inputlar */
+input, select {
+  width: 100%;
+  padding: 12px;
+  margin-top: 10px;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  font-size: 14px;
+}
+
+/* Buttonlar */
+button {
+  width: 100%;
+  padding: 12px;
+  margin-top: 20px;
+  border: none;
+  border-radius: 12px;
+  background: linear-gradient(135deg, #667eea, #764ba2);
+  color: white;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+button:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.25);
+}
+
+/* Suallar */
+.question {
+  background: #f7f8fc;
+  padding: 15px;
+  border-radius: 12px;
+  margin-bottom: 15px;
+}
+
+/* Nəticə */
+#result {
+  background: #f0f3ff;
+  border-radius: 12px;
+  padding: 15px;
+  margin-top: 20px;
+  text-align: center;
+  font-size: 16px;
+}
+
+/* Animasiya */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 </style>
 </head>
+
 <body>
 
 <!-- LOGIN -->
 <div id="loginBox">
   <h2>Giriş</h2>
-  <input type="text" id="username" placeholder="İstifadəçi adı"><br>
-  <input type="password" id="password" placeholder="Şifrə"><br>
+  <input type="text" id="username" placeholder="İstifadəçi adı">
+  <input type="password" id="password" placeholder="Şifrə">
   <button onclick="login()">Daxil ol</button>
-  <p id="loginError" style="color:red;"></p>
+  <p id="loginError" style="color:red; text-align:center;"></p>
 </div>
 
 <!-- QUIZ -->
-<div id="quizContainer">
+<div id="quizContainer" style="display:none;">
   <button onclick="logout()">Çıxış</button>
 
   <h1>Fizika Testi</h1>
@@ -46,9 +135,7 @@
 </div>
 
 <script>
-/* ===== LOGIN SISTEMI ===== */
-
-// Demo istifadəçi
+/* LOGIN */
 const USER = {
   username: "Şagird",
   password: "balux"
@@ -62,7 +149,8 @@ function login() {
     localStorage.setItem("loggedIn", "true");
     showQuiz();
   } else {
-    document.getElementById("loginError").innerText = "İstifadəçi adı və ya şifrə səhvdir!";
+    document.getElementById("loginError").innerText =
+      "İstifadəçi adı və ya şifrə səhvdir!";
   }
 }
 
@@ -76,63 +164,53 @@ function showQuiz() {
   document.getElementById("quizContainer").style.display = "block";
 }
 
-/* Səhifə açılarkən yoxla */
 if (localStorage.getItem("loggedIn") === "true") {
   showQuiz();
 }
 
-/* ===== QUIZ SISTEMI ===== */
-
+/* QUIZ */
 let currentData = [];
 
 function loadQuiz(filename) {
   fetch(filename)
-    .then(response => response.json())
+    .then(res => res.json())
     .then(data => {
       currentData = data;
-      const quizDiv = document.getElementById('quiz');
-      quizDiv.innerHTML = '';
-      data.forEach((q, index) => {
-        const div = document.createElement('div');
-        div.classList.add('question');
-        div.innerHTML = `<p>${index + 1}. ${q.question}</p>` +
-          q.options.map(opt =>
-            `<label><input type="radio" name="q${index}" value="${opt}"> ${opt}</label><br>`
-          ).join('');
-        quizDiv.appendChild(div);
+      const quizDiv = document.getElementById("quiz");
+      quizDiv.innerHTML = "";
+      data.forEach((q, i) => {
+        quizDiv.innerHTML += `
+          <div class="question">
+            <p><b>${i+1}.</b> ${q.question}</p>
+            ${q.options.map(opt =>
+              `<label><input type="radio" name="q${i}" value="${opt}"> ${opt}</label><br>`
+            ).join("")}
+          </div>
+        `;
       });
-      document.getElementById('result').innerHTML = '';
+      document.getElementById("result").innerHTML = "";
     });
 }
 
-// Başlanğıc test
-loadQuiz(document.getElementById('classSelect').value);
+loadQuiz(document.getElementById("classSelect").value);
 
-document.getElementById('classSelect').addEventListener('change', (e) => {
+document.getElementById("classSelect").addEventListener("change", e => {
   loadQuiz(e.target.value);
 });
 
-document.getElementById('submitBtn').addEventListener('click', () => {
+document.getElementById("submitBtn").addEventListener("click", () => {
   let correct = 0;
-  let wrong = 0;
-  currentData.forEach((q, index) => {
-    const answer = document.querySelector(`input[name="q${index}"]:checked`);
-    if (answer && answer.value === q.correctAnswer) correct++;
-    else wrong++;
+  currentData.forEach((q, i) => {
+    const a = document.querySelector(`input[name="q${i}"]:checked`);
+    if (a && a.value === q.correctAnswer) correct++;
   });
-  document.getElementById('result').innerHTML = `
+  document.getElementById("result").innerHTML = `
     <h2>Nəticə</h2>
     <p>Düz: ${correct}</p>
-    <p>Səhv: ${wrong}</p>
+    <p>Səhv: ${currentData.length - correct}</p>
   `;
 });
 </script>
 
 </body>
 </html>
-
-
-
-
-
-
