--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ button:hover {
   <button onclick="logout()">Çıxış</button>
 
   <h1>Fizika Testi</h1>
+  <h2> Uğurlar</h2>
 
   <label for="classSelect">Sinifi seçin:</label>
   <select id="classSelect">
@@ -214,3 +215,4 @@ document.getElementById("submitBtn").addEventListener("click", () => {
 
 </body>
 </html>
+
