--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ button:hover {
 <script>
 /* LOGIN */
 USER = {
-  username: "Sagird",
+  username: "Şagird",
   password: "balux"
 };
 
@@ -146,7 +146,7 @@ function login() {
   const u = document.getElementById("username").value;
   const p = document.getElementById("password").value;
 
-  if (u === USER.username && p === USER.password) {
+  if (u == USER.username && p == USER.password) {
     localStorage.setItem("loggedIn", "true");
     showQuiz();
   } else {
@@ -215,6 +215,7 @@ document.getElementById("submitBtn").addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
