--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@ body {
   justify-content: center;
 }
 
-/* LOGIN v? QUIZ qutusu */
 #loginBox, #quizContainer {
   background: #ffffff;
   width: 100%;
@@ -27,31 +26,25 @@ body {
   padding: 30px;
   border-radius: 16px;
   box-shadow: 0 15px 40px rgba(0,0,0,0.2);
-  animation: fadeIn 0.6s ease;
 }
 
-/* Quiz  */
 #quizContainer {
   max-width: 800px;
 }
 
-/* Basl?qlar */
 h1, h2 {
   text-align: center;
   color: #333;
 }
 
-/* Inputlar */
 input, select {
   width: 100%;
   padding: 12px;
   margin-top: 10px;
   border-radius: 10px;
   border: 1px solid #ddd;
-  font-size: 14px;
 }
 
-/* Buttonlar */
 button {
   width: 100%;
   padding: 12px;
@@ -60,18 +53,10 @@ button {
   border-radius: 12px;
   background: linear-gradient(135deg, #667eea, #764ba2);
   color: white;
-  font-size: 15px;
   font-weight: bold;
   cursor: pointer;
-  transition: 0.3s;
 }
 
-button:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 10px 20px rgba(0,0,0,0.25);
-}
-
-/* Suallar */
 .question {
   background: #f7f8fc;
   padding: 15px;
@@ -79,26 +64,12 @@ button:hover {
   margin-bottom: 15px;
 }
 
-/* Nəticə */
 #result {
   background: #f0f3ff;
   border-radius: 12px;
   padding: 15px;
   margin-top: 20px;
   text-align: center;
-  font-size: 16px;
-}
-
-/* Animasiya */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
 }
 </style>
 </head>
@@ -108,20 +79,20 @@ button:hover {
 <!-- LOGIN -->
 <div id="loginBox">
   <h2>Giris</h2>
-  <input type="text" id="username" placeholder="Istifadəci adı">
-  <input type="password" id="password" placeholder="Sifrə">
+  <input type="text" id="username" placeholder="Istifadəçi adı">
+  <input type="password" id="password" placeholder="Şifrə">
   <button onclick="login()">Daxil ol</button>
   <p id="loginError" style="color:red; text-align:center;"></p>
 </div>
 
 <!-- QUIZ -->
 <div id="quizContainer" style="display:none;">
-  <button onclick="logout()">Çxış</button>
+  <button onclick="logout()">Çıxış</button>
 
   <h1>Fizika Testi</h1>
-  <h2> Uğurlar</h2>
+  <h2>Uğurlar</h2>
 
-  <label for="classSelect">Sinifi seçin:</label>
+  <label>Sinifi seçin:</label>
   <select id="classSelect">
     <option value="sinif7_fizika.json">7-ci sinif</option>
     <option value="sinif8_fizika.json">8-ci sinif</option>
@@ -137,7 +108,7 @@ button:hover {
 
 <script>
 /* LOGIN */
-USER = {
+const USER = {
   username: "Şagird",
   password: "balux"
 };
@@ -146,12 +117,12 @@ function login() {
   const u = document.getElementById("username").value;
   const p = document.getElementById("password").value;
 
-  if (u == USER.username && p == USER.password) {
+  if (u === USER.username && p === USER.password) {
     localStorage.setItem("loggedIn", "true");
     showQuiz();
   } else {
     document.getElementById("loginError").innerText =
-      "Istifadəci adı və ya sifrə səhvdir!";
+      "İstifadəçi adı və ya şifrə səhvdir!";
   }
 }
 
@@ -179,17 +150,27 @@ function loadQuiz(filename) {
       currentData = data;
       const quizDiv = document.getElementById("quiz");
       quizDiv.innerHTML = "";
+
       data.forEach((q, i) => {
         quizDiv.innerHTML += `
           <div class="question">
-            <p><b>${i+1}.</b> ${q.question}</p>
+            <p><b>${i + 1}.</b> ${q.question}</p>
             ${q.options.map(opt =>
-              `<label><input type="radio" name="q${i}" value="${opt}"> ${opt}</label><br>`
+              `<label>
+                <input type="radio" name="q${i}" value="${opt}">
+                ${opt}
+              </label><br>`
             ).join("")}
           </div>
         `;
       });
+
       document.getElementById("result").innerHTML = "";
+      document.getElementById("submitBtn").disabled = false;
+
+      document
+        .querySelectorAll("#quiz input[type='radio']")
+        .forEach(r => r.disabled = false);
     });
 }
 
@@ -201,22 +182,27 @@ document.getElementById("classSelect").addEventListener("change", e => {
 
 document.getElementById("submitBtn").addEventListener("click", () => {
   let correct = 0;
+
   currentData.forEach((q, i) => {
     const a = document.querySelector(`input[name="q${i}"]:checked`);
     if (a && a.value === q.correctAnswer) correct++;
   });
+
   document.getElementById("result").innerHTML = `
-    <h2>N?tic?</h2>
-    <p>Duz: ${correct}</p>
-    <p>S?hv: ${currentData.length - correct}</p>
+    <h2>Nəticə</h2>
+    <p>Düz: ${correct}</p>
+    <p>Səhv: ${currentData.length - correct}</p>
   `;
+
+  // 🔒 VARIANTLARI BAĞLA
+  document
+    .querySelectorAll("#quiz input[type='radio']")
+    .forEach(r => r.disabled = true);
+
+  // 🔒 BITIR DÜYMƏSİNİ BAĞLA
+  document.getElementById("submitBtn").disabled = true;
 });
 </script>
 
 </body>
 </html>
-
-
-
-
-
