--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ button {
 <!-- LOGIN -->
 <div id="loginBox">
   <h2>Giriş</h2>
-  <input type="text" id="username" placeholder="İstifadəçi adı">
+  <input type="text" id="username" placeholder="İstifadəçi">
   <input type="password" id="password" placeholder="Şifrə">
   <button onclick="login()">Daxil ol</button>
   <p id="loginError" style="color:red; text-align:center;"></p>
@@ -196,6 +196,7 @@ submitBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
