--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ button {
 
 <script>
 /* LOGIN */
-const USER = { username: "Sagird", password: "balux" };
+const USER = { username: "Şagird", password: "balux" };
 
 function login() {
   const u = username.value;
@@ -196,6 +196,7 @@ submitBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
