--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ function login() {
   const u = username.value;
   const p = password.value;
 
-  if (u === USER.username && p === USER.password) {
+  if (u = USER.username && p = USER.password) {
     localStorage.setItem("loggedIn", "true");
     showQuiz();
   } else {
@@ -196,6 +196,7 @@ submitBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
