--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ button {
 }
 
 .question {
-  background: #f7f8fc;
+  background: #4a7c91
   padding: 15px;
   border-radius: 12px;
   margin-bottom: 15px;
@@ -196,6 +196,7 @@ submitBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
