--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 #loginBox, #quizContainer {
@@ -31,7 +32,7 @@ body {
 h1, h2 { text-align: center; }
 
 input, select {
-  width: 25%;
+  width: 100%;
   padding: 12px;
   margin-top: 10px;
   border-radius: 10px;
@@ -51,10 +52,11 @@ button {
 }
 
 .question {
-  background: #4a7c91
+  background: #4a7c91;
   padding: 15px;
   border-radius: 12px;
   margin-bottom: 15px;
+  color:white;
 }
 
 #result {
@@ -69,7 +71,6 @@ button {
 
 <body>
 
-<!-- LOGIN -->
 <div id="loginBox">
   <h2>Giriş</h2>
   <input type="text" id="username" placeholder="İstifadəçi">
@@ -78,12 +79,10 @@ button {
   <p id="loginError" style="color:red; text-align:center;"></p>
 </div>
 
-<!-- QUIZ -->
 <div id="quizContainer" style="display:none;">
   <button onclick="logout()">Çıxış</button>
 
   <h1>Fizika Testi</h1>
-  <h2>Uğurlar</h2>
 
   <select id="classSelect">
     <option value="sinif7_fizika.json">7-ci sinif</option>
@@ -99,18 +98,14 @@ button {
 </div>
 
 <script>
-/* LOGIN */
 const USER = { username: "Şagird", password: "balux" };
 
 function login() {
-  const u = username.value;
-  const p = password.value;
-
-  if (u === USER.username && p === USER.password) {
+  if (username.value === USER.username && password.value === USER.password) {
     localStorage.setItem("loggedIn", "true");
     showQuiz();
   } else {
-    loginError.innerText = "İstifadəçi adı və ya şifrə səhvdir!";
+    loginError.innerText = "Yanlış giriş!";
   }
 }
 
@@ -126,7 +121,6 @@ function showQuiz() {
 
 if (localStorage.getItem("loggedIn")) showQuiz();
 
-/* QUIZ */
 let currentData = [];
 
 function loadQuiz(file) {
@@ -148,39 +142,19 @@ function loadQuiz(file) {
       `;
     });
 
-    submitBtn.disabled = false;
-    document.querySelectorAll("input[type=radio]").forEach(r => r.disabled = false);
     result.innerHTML = "";
+    submitBtn.disabled = false;
   });
 }
 
 loadQuiz(classSelect.value);
 classSelect.onchange = e => loadQuiz(e.target.value);
 
-/* BITIR + RƏNGLƏNDİRMƏ */
-submitBtn.addEventListener("click", () => {
+submitBtn.onclick = () => {
   let correct = 0;
 
   currentData.forEach((q, i) => {
     const selected = document.querySelector(`input[name=q${i}]:checked`);
-    const options = document.querySelectorAll(`input[name=q${i}]`);
-
-    options.forEach(opt => {
-      const label = opt.parentElement;
-
-      if (opt.value === q.correctAnswer) {
-        label.style.color = "green";
-        label.style.fontWeight = "bold";
-      }
-
-      if (selected && opt === selected && opt.value !== q.correctAnswer) {
-        label.style.color = "red";
-        label.style.fontWeight = "bold";
-      }
-
-      opt.disabled = true;
-    });
-
     if (selected && selected.value === q.correctAnswer) correct++;
   });
 
@@ -189,19 +163,15 @@ submitBtn.addEventListener("click", () => {
     <p>Düz: ${correct}</p>
     <p>Səhv: ${currentData.length - correct}</p>
   `;
-
-  submitBtn.disabled = true;
-});
+};
 </script>
+
+<!-- 🔢 ZİYARƏTÇİ SAYĞACI -->
+<div style="margin-top:30px; text-align:center;">
+  <a href='https://free-hit-counters.net/'>Free-Hit-Counters.net</a>
+  <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=f52c920dc8704f8c9c83b6780ab6ed1ff4eb1191'></script>
+  <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1493646/t/2"></script>
+</div>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
